--- a/muji.html
+++ b/muji.html
@@ -22,6 +22,7 @@ function openWin(str)
 	window.open(str,"Sample","width=1280,height=720");
 }
 // --></script>
+<meta name="robots" content="noindex, nofollow">
 </head>
 <body> 
     <center>
